[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/thrishaStuff/Audio/PlebTown/Kevin MacLeodï¼š Achaidh Cheide.wav" type="AudioStream" id=1]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Plebs.gd" type="Script" id=2]
[ext_resource path="res://Scenes/thrishaStuff/Prefab/plebs.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Thief.gd" type="Script" id=7]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/Mayor.gd" type="Script" id=8]
[ext_resource path="res://Scenes/thrishaStuff/images/cheerleader.png" type="Texture" id=9]
[ext_resource path="res://Scenes/leoStuff/HUD/HUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/thrishaStuff/Scripts/PlebTown.gd" type="Script" id=11]
[ext_resource path="res://Scenes/mimistuff/alistair_animations/character.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 541, 345.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 162.077

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 546.5 )

[node name="PlebTown" type="Node2D"]
script = ExtResource( 11 )

[node name="Plebs" type="Area2D" parent="."]
position = Vector2( 1101, 722 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="QuestionMark" type="Sprite" parent="Plebs"]
position = Vector2( 300, -500 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plebs"]
position = Vector2( 326, -11.5 )
shape = SubResource( 9 )

[node name="PlebA" parent="Plebs" instance=ExtResource( 3 )]

[node name="PlebB" parent="Plebs" instance=ExtResource( 3 )]
position = Vector2( 363, -10 )
pleb = 1

[node name="PlebC" parent="Plebs" instance=ExtResource( 3 )]
position = Vector2( 685, -10 )
pleb = 2

[node name="Mayor" type="Area2D" parent="."]
position = Vector2( 446, 833 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mayor"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Mayor"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 9 )

[node name="QuestionMark" type="Sprite" parent="Mayor"]
position = Vector2( 0, -135 )
texture = ExtResource( 6 )

[node name="Thief" type="Area2D" parent="."]
position = Vector2( 222, 829 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Thief"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Thief"]
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 9 )

[node name="QuestionMark" type="Sprite" parent="Thief"]
position = Vector2( 0, -135 )
texture = ExtResource( 6 )

[node name="player" parent="." instance=ExtResource( 12 )]
pause_mode = 2
position = Vector2( 728, 715 )
inOverworld = false

[node name="HUD" parent="player" instance=ExtResource( 10 )]
position = Vector2( 162, -121 )
limit_left = 0
limit_top = 0
limit_right = 2225
limit_bottom = 0

[node name="rightBoundary" type="StaticBody2D" parent="."]
position = Vector2( 2411, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="rightBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 3 )

[node name="leftBoundary" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="leftBoundary"]
position = Vector2( -4, 532.5 )
shape = SubResource( 3 )

[node name="PlebTownAudio" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
position = Vector2( 980, 566 )
stream = ExtResource( 1 )

[connection signal="body_entered" from="Plebs" to="Plebs" method="_on_Plebs_body_entered"]
[connection signal="body_exited" from="Plebs" to="Plebs" method="_on_Plebs_body_exited"]
[connection signal="body_entered" from="Mayor" to="Mayor" method="_on_Cheerleader_body_entered"]
[connection signal="body_exited" from="Mayor" to="Mayor" method="_on_Cheerleader_body_exited"]
[connection signal="body_entered" from="Thief" to="." method="_on_Thief_body_entered"]
[connection signal="body_entered" from="Thief" to="Thief" method="_on_Thief_body_entered"]
[connection signal="body_exited" from="Thief" to="." method="_on_Thief_body_exited"]
[connection signal="body_exited" from="Thief" to="Thief" method="_on_Thief_body_exited"]
